install_headers([
    'EST_TDequeI.h',
    'EST_THashI.h',
    'EST_TIteratorI.h',
    'EST_TKVLI.h',
    'EST_TListI.h',
    'EST_TMatrixI.h',
    'EST_TNamedEnumI.h',
    'EST_TSimpleMatrixI.h',
    'EST_TSimpleVectorI.h',
    'EST_TSortableI.h',
    'EST_TStringHashI.h',
    'EST_TVectorI.h'
  ],
  subdir : meson.project_name() / 'include' / 'instantiate')

pkg_config_h_subdirs += meson.project_name() / 'include' / 'instantiate'

