install_headers([
    'EST_FeatureFunctionPackage.h',
    'EST_item_aux.h',
    'EST_item_content_aux.h',
    'EST_Item_Content.h',
    'EST_Item.h',
    'EST_relation_aux.h',
    'EST_relation_compare.h',
    'EST_Relation.h',
    'EST_Relation_list.h',
    'EST_Relation_mls.h',
    'EST_Relation_tree.h',
    'EST_utterance_aux.h',
    'EST_Utterance.h',
    'EST_utterance_xml.h'
  ],
  subdir : meson.project_name() / 'include' / 'ling_class')

pkg_config_h_subdirs += meson.project_name() / 'include' / 'ling_class'

