install_headers([
    'charset.h',
    'ctype16.h',
    'dtd.h',
    'input.h',
    'rxp.h',
    'stdio16.h',
    'string16.h',
    'system.h',
    'url.h',
    'XML_Parser.h',
    'xmlparser.h'
  ],
  subdir : meson.project_name() / 'include' / 'rxp')

pkg_config_h_subdirs += meson.project_name() / 'include' / 'rxp'

