install_headers([
    'EST_fft.h',
    'EST_filter_design.h',
    'EST_filter.h',
    'EST_misc_sigpr.h',
    'EST_pitchmark.h',
    'EST_sigpr_frame.h',
    'EST_sigpr_utt.h',
    'EST_spectrogram.h',
    'EST_Window.h'
  ],
  subdir : meson.project_name() / 'include' / 'sigpr')

pkg_config_h_subdirs += meson.project_name() / 'include' / 'sigpr'

